--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~7.2.0",
-    "@angular/cdk": "~7.3.7",
+    "@angular/cdk": "^7.3.7",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
@@ -23,9 +23,20 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "@auth0/angular-jwt": "^3.0.0",
+    "@fortawesome/angular-fontawesome": "^0.3.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.18",
+    "@fortawesome/free-brands-svg-icons": "^5.8.2",
+    "@fortawesome/free-solid-svg-icons": "^5.8.2",
+    "@ngx-share/button": "^7.1.3",
+    "@ngx-share/buttons": "^7.1.3",
+    "@ngx-share/core": "^7.1.3",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
+    "ngx-cookie-service": "^2.2.0",
+    "ngx-infinite-scroll": "^8.0.0",
+    "ngx-owl-carousel-o": "^2.0.1",
     "ngx-toastr": "^10.2.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
