--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "hammerjs": "^2.0.8",
     "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
+    "ng2-scroll-to": "^1.0.7",
     "ngx-cookie-service": "^2.2.0",
     "ngx-infinite-scroll": "^8.0.0",
     "ngx-owl-carousel-o": "^2.0.1",
